Fixed responsive on small devices

--- a/styles/landing.scss
+++ b/styles/landing.scss
@@ -183,6 +183,10 @@
 @media (max-width: 500px) {
     .wrapper{
 
+        & .section--title{
+            font-size: 2em;
+        }
+
         & .items--wrap {
             grid-template-columns: 1fr;
         }
